--- a/Academia/src/main/resources/application.properties
+++ b/Academia/src/main/resources/application.properties
@@ -6,4 +6,5 @@ server.error.include-stacktrace=never
 spring.datasource.url=jdbc:mariadb://localhost:3306/academia
 spring.datasource.username=user
 spring.datasource.password=pass
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+spring.jpa.hibernate.ddl-auto=validate
