Course and Academia integration

--- a/Academia/src/main/resources/application.properties
+++ b/Academia/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.username=user
 spring.datasource.password=pass
 
 spring.jpa.hibernate.ddl-auto=validate
+
+academia.authorization.username=academia
+academia.authorization.password=password
+
+courses.host=localhost:8000
+courses.path=/api/courses
