Docker Academia Courses IDM

--- a/Academia/src/main/resources/application.properties
+++ b/Academia/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.application.name=Academia
 server.servlet.context-path=/api/academia
 server.error.include-stacktrace=never
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/academia
+# suppress inspection "SpellCheckingInspection"
+spring.datasource.url=jdbc:mariadb://academiadb:3306/academia
 spring.datasource.username=user
 spring.datasource.password=pass
 
@@ -12,5 +13,9 @@ spring.jpa.hibernate.ddl-auto=validate
 academia.authorization.username=academia
 academia.authorization.password=password
 
-courses.host=localhost:8000
+courses.host=courses
+courses.port=8000
 courses.path=/api/courses
+
+idm.host=idm
+idm.port=50000
